<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="150dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvGameName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/games"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvHighScore"
            android:text="@string/high_score_example"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <TextView
            android:id="@+id/tvBestTime"
            android:text="@string/record_time_example"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
