<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.games.StartGameFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivProductImage"
            android:src="@drawable/ic_missing_image"
            android:background="@color/basic_gray"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/glBottomImage"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/tvGameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_game_name"
            android:textStyle="bold"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/ivProductImage"
            android:layout_marginBottom="40dp"
            android:layout_marginHorizontal="40dp"/>

        <TextView
            android:id="@+id/tvGameDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_description_example"
            app:layout_constraintTop_toBottomOf="@id/ivProductImage"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:layout_marginHorizontal="40sp"/>

        <LinearLayout
            android:id="@+id/layoutScores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGameDescription"
            android:layout_marginTop="60dp"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="60dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_score"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_best_score"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_time"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_record_time"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnStarGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutScores"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="90dp"
            android:backgroundTint="@color/symbol_gray"
            android:text="@string/btn_start_game_message"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glBottomImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".4"/>

    </androidx.constraintlayout.widget.ConstraintLayout>





</FrameLayout>