<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#80000000"
    tools:context=".ui.fragments.tutorials.GeneralGameGuideFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/mainCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:padding="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_guide_title"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="8dp">

                <ImageButton
                    android:id="@+id/btnPrev"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_arrow_left" />

                <ImageView
                    android:id="@+id/ivGuideImage"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_missing_image"
                    android:scaleType="centerCrop"
                    android:background="@color/basic_gray"/>

                <ImageButton
                    android:id="@+id/btnNext"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_arrow_right" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dotsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_step_description"
                android:gravity="center"
                android:layout_marginHorizontal="20dp"
                android:textColor="@android:color/black"
                android:layout_marginBottom="24dp" />

            <Button
                android:id="@+id/btnDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_done_string"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:paddingHorizontal="32dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</FrameLayout>